--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,15 @@
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>3.2.0</version> <!-- or whatever you're using -->
+            </plugin>
+
         </plugins>
+
     </build>
 
 
