--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@ googleSheetTemplateLoadingEnabled=false
 googleSheetSignupSynchronizationEnabled=false
 googleSheetRankingSynchronizationEnabled=false
 googleSheetGameInsertEnabled=false
+# Google Sheets API Configuration
+google.credentials.file=google-credentials.json
+google.sheet.id=1RDGkCiy9v_qXFjz1q_8sUk2rUldv1W28DgZHwlt2DSY
 # WarLight host credentials (placeholders for now)
 hostEmail=your-email@example.com
 hostApiToken=your-api-token
