--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,9 @@ googleSheetSignupSynchronizationEnabled=false
 googleSheetRankingSynchronizationEnabled=false
 googleSheetGameInsertEnabled=false
 # Google Sheets API Configuration
-google.credentials.file=google-credentials.json
+#google.credentials.file=google-credentials.json
+# This can point to either an absolute file (like /tmp/...) or classpath (like google-credentials.json)
+google.credentials.file=classpath:google-credentials.json
 google.sheet.id=1RDGkCiy9v_qXFjz1q_8sUk2rUldv1W28DgZHwlt2DSY
 # WarLight host credentials (placeholders for now)
 hostEmail=your-email@example.com
